added ISM content

--- a/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
+++ b/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
@@ -470,7 +470,80 @@
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "### Comparing two populations\n",
+    "\n",
+    "Consider two populations:\n",
+    "1. Population 1 with mean $\\mu_1$ and standard deviation $\\sigma_1$, sampling we get a sample of size $n_1$ with sample mean $\\bar{x}_1$ and sample standard deviation $s_1$\n",
+    "2. Population 2 with mean $\\mu_2$ and standard deviation $\\sigma_2$, sampling we get a sample of size $n_2$ with sample mean $\\bar{x}_2$ and sample standard deviation $s_2$\n",
+    "\n",
+    "Our goal is to compare the two populations, by estimating the difference between the two population means $\\mu_1 - \\mu_2$, using the samples.\n",
+    "\n",
+    "Samples from two distinct populations are independent if each one is drawn without reference to the other, and has no connection with the other.\n",
+    "\n",
+    "#### 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for large samples\n",
+    "- A point estimate for the difference in two population means is simply the difference in the corresponding sample means.\n",
+    "- A confidence interval for the difference in two population means is computed using a formula in the same fashion as was done for a single population mean.\n",
+    "$$ (\\bar{x}_1 - \\bar{x}_2) \\pm z_{\\alpha/2} \\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}$$\n",
+    "\n",
+    "#### Hypothesis testing for $\\mu_1 - \\mu_2$ for large samples\n",
+    "The same five-step procedure used to test hypotheses concerning a single population mean is used to test hypotheses concerning the difference between two population means. The only difference is in the formula for the standardized test statistic.\n",
+    "\n",
+    "$$ H_0: \\mu_1 - \\mu_2 = D_0$$\n",
+    "$$ H_a: \\mu_1 - \\mu_2 < D_0 \\text{ or } \\mu_1 - \\mu_2 > D_0 \\text{ or } \\mu_1 - \\mu_2 \\neq D_0$$\n",
+    "\n",
+    "Standardized test statistic:\n",
+    "$$ Z = \\frac{(\\bar{x}_1 - \\bar{x}_2) - D_0}{\\sqrt{\\frac{s_1^2}{n_1} + \\frac{s_2^2}{n_2}}}$$\n",
+    "The samples must be independent and the population distributions must be normal or the sample sizes must be large.\n",
+    "\n",
+    "#### 100(1 - $\\alpha$)% confidence interval for $\\mu_1 - \\mu_2$ for small samples\n",
+    "$$ (\\bar{x}_1 - \\bar{x}_2) \\pm t_{\\alpha/2} \\sqrt{s_p^2 \\left( \\frac{1}{n_1} + \\frac{1}{n_2} \\right)}$$\n",
+    "where $s_p^2$ is the pooled sample variance, defined as\n",
+    "$$ s_p^2 = \\frac{(n_1 - 1)s_1^2 + (n_2 - 1)s_2^2}{n_1 + n_2 - 2}$$\n",
+    "and the number of degrees of freedom is $n_1 + n_2 - 2$.\n",
+    "\n",
+    "#### Hypothesis testing for $\\mu_1 - \\mu_2$ for small samples\n",
+    "$$ T = \\frac{(\\bar{x}_1 - \\bar{x}_2) - D_0}{s_p^2 \\sqrt{\\frac{1}{n_1} + \\frac{1}{n_2}}}$$\n",
+    "The test statistic has Student's t distribution with $n_1 + n_2 - 2$ degrees of freedom.\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regression and correlation\n",
+    "Two variables $x$ and $y$ have a deterministic linear relationship if points plotted from $(x, y)$ pairs lie exactly along a single straight line. In practice it is common for two variables to exhibit a relationship that is close to linear but which contains an element, possibly large, of randomness.\n",
+    "\n",
+    "#### Linear correlation coefficient\n",
+    "The linear correlation coefficient is a number computed directly from the data that measures the strength of the linear relationship between the two variables $x$ and $y$. The linear correlation coefficient is denoted by $r$ and is defined by the following formula:\n",
+    "$$ r = \\frac{\\sum{(x_i - \\bar{x})(y_i - \\bar{y})}}{\\sqrt{\\sum{(x_i - \\bar{x})^2} \\sum{(y_i - \\bar{y})^2}}} = \\frac{S_{xy}}{\\sqrt{S_{xx}S_{yy}}}$$\n",
+    "where $S_{xy}$, $S_{xx}$, and $S_{yy}$ are the sums of squares defined by\n",
+    "where $\\bar{x}$ and $\\bar{y}$ are the sample means of the $x$ and $y$ values, respectively.\n",
+    "\n",
+    "Properties:\n",
+    "1. value of $r$ is always between -1 and 1, inclusive\n",
+    "2. sign of $r$ indicates the direction of the linear relationship between $x$ and $y$\n",
+    "3. size of $|r|$ indicates the strength of the linear relationship between $x$ and $y$\n",
+    "   - $|r|$ close to 1 indicates a strong linear relationship, $|r|$ close to 0 indicates a weak linear relationship"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### $\\chi^2$ tests and F-tests\n",
+    "\n",
+    "#### $\\chi^2$ test for independence\n",
+    "All the $\\chi^2$ distributions form a family, each specified by a parameter called the number of degrees of freedom. The number of degrees of freedom for a $\\chi^2$ distribution is equal to the number of independent standard normal random variables that are squared and summed to obtain the $\\chi^2$ random variable.\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/T4Ow1S0.jpg\" width=\"600\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n",
+    "The value of the $\\chi^2$ random variable with $df = k$ that cuts off a right tail with an area of $c$ is denoted by $\\chi^2_c$.\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "attachments": {},
