adding more notes, DML, ISM

--- a/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
+++ b/Semester 2/ISM/ISM_Formulas_and_Code.ipynb
@@ -184,7 +184,7 @@
     "- sample space: the set of all possible outcomes of a random event\n",
     "    - discrete sample space: a sample space with a finite number of outcomes\n",
     "    - continuous sample space: a sample space with an infinite number of outcomes\n",
-    "- event: a subset of the sample space\n",
+    "- event: a subset of the sample space of a random experiment\n",
     "- probability: a numerical measure of the likelihood that an event will occur\n",
     "$$ P(A) = \\frac{\\text{number of outcomes in A}}{\\text{number of outcomes in S}} = \\frac{\\text{number of favorable outcomes}}{\\text{number of possible outcomes}}$$\n",
     "- empirical probability: the relative frequency of an event occurring in a series of trials\n",
@@ -206,8 +206,8 @@
     "- mutually exclusive / disjoint events: events that have no outcomes in common\n",
     "  - if $A$ and $B$ are mutually exclusive, then $A \\cap B = \\emptyset$\n",
     "- independent events: events that have no effect on each other\n",
-    "- addition rule: the probability of the union of two events is equal to the sum of the probabilities of the individual events minus the probability of their intersection\n",
-    "$$ P(A \\cup B) = P(A) + P(B) - P(A \\cap B)$$\n",
+    "- addition rule: the probability of the union of two events is equal to the sum of the probabilities of the individual events minus the probability of their intersection $$ P(A \\cup B) = P(A) + P(B) - P(A \\cap B)$$\n",
+    "  - if mutually exclusive, $P(A \\cap B) = 0$, then $P(A \\cup B) = P(A) + P(B)$\n",
     "\n",
     "#### Probability\n",
     "- the probability of an outcome $e$ in a sample space $S$ is a number $P$ between $0$ and $1$ that measures the likelihood that $e$ will occur on a single trial of a random experiment. The probability of an event $E$ is the sum of the probabilities of the outcomes in $E$.\n",
@@ -225,19 +225,105 @@
     "### Conditional probability\n",
     "\n",
     "The conditional probability of $A$ given $B$, denoted $P(A|B)$, is the probability that event $A$ has occurred in a trial of a random experiment for which it is known that event $B$ has definitely occurred.\n",
-    "For any two events $A$ and $B$ with $P(B) > 0$, the conditional probability of $A$ given $B$ is defined as:\n",
-    "$$ P(A|B) = \\frac{P(A \\cap B)}{P(B)}$$\n",
+    "For any two events $A$ and $B$ with $P(B) > 0$, the conditional probability of $A$ given $B$ is defined as: $$ P(A|B) = \\frac{P(A \\cap B)}{P(B)}$$\n",
+    "Here, $P(A \\cap B)$ is equal to both $P(A)P(B|A)$ and $P(B)P(A|B)$.\n",
     "\n",
     "Conditional probability relation for three events $A$, $B$, and $C$:\n",
     "$$ P(A \\cap B \\cap C) = P(A|B \\cap C)P(B \\cap C) = P(A|B \\cap C)P(B|C)P(C)$$\n",
+    "\n",
+    "This is called the multiplication rule, which can be extended to any number of events.\n",
     "\n",
     "#### Independent events\n",
     "\n",
     "- We expect $P(A | B)$ to be different from $P(A)$, but it does not always happen. If $P(A | B) = P(A)$, then $A$ and $B$ are independent events and the occurrence of $B$ has no effect on the likelihood of $A$.\n",
     "  - $P(A|B) = P(A)$ if and only if $P(A \\cap B) = P(A)P(B)$, that is, the probability of $A$ and $B$ occurring together is equal to the product of their individual probabilities\n",
     "  - if A and B are not independent, then they are dependent and $P(A \\cap B) \\neq P(A)P(B)$\n",
-    "\n"
+    "  - independence intuitively means that the occurrence of one event does not affect the probability of the other event\n",
+    "    - independence does not imply disjointness\n",
+    "\n",
+    "#### Law of total probability\n",
+    "\n",
+    "If $B_1, B_2, ..., B_n$ are mutually exclusive and exhaustive events, then for any event $A$, $$ P(A) = P(A|B_1)P(B_1) + P(A|B_2)P(B_2) + ... + P(A|B_n)P(B_n)$$"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bayes Theorem\n",
+    "\n",
+    "Let $P = {A_1, A_2, ..., A_n}$ be a partition of the sample space $S$ of a random experiment, and let $B$ be an event such that $P(B) > 0$. Then for any $i = 1, 2, ..., n$, $$ P(A_i|B) = \\frac{P(A_i \\cap B)}{P(B)} = \\frac{P(A_i)P(B|A_i)}{P(A_1)P(B|A_1) + P(A_2)P(B|A_2) + ... + P(A_n)P(B|A_n)}$$\n",
+    "\n",
+    "#### Bayesian learning\n",
+    "\n",
+    "- Bayesian learning is a method of statistical inference in which Bayes' theorem is used to update the probability for a hypothesis as more evidence or information becomes available.\n",
+    "- Naive Bayes classifier: a simple probabilistic classifier based on applying Bayes' theorem with strong independence assumptions between the features.\n",
+    "    - assumes that the presence of a particular feature in a class is unrelated to the presence of any other feature.\n",
+    "    - is a linear classifier, which means it assumes that the data is linearly separable.\n",
+    "    - is a fast, simple classification algorithm that performs well on large datasets.   \n",
+    "    - is a good choice when the dimensionality of the inputs is high.\n",
+    "    - is often used for text classification, spam filtering, sentiment analysis, and recommender systems.\n",
+    "\n",
+    "#### Bayes' theorem\n",
+    "- in the context of machine learning, Bayes' theorem can be used to calculate the probability of a hypothesis given our prior knowledge. $$ P(h|D) = \\frac{P(D|h)P(h)}{P(D)}$$\n",
+    "  - $P(h)$ is the prior probability of $h$ being true\n",
+    "  - $P(D)$ is the prior probability of $D$ being true\n",
+    "  - $P(h|D)$ is the posterior probability of $h$ being true given $D$\n",
+    "  - $P(D|h)$ is the likelihood of $D$ given $h$\n",
+    "- maximum a posteriori (MAP) estimation: a method of estimating the parameters of a statistical model given observations, by finding the parameter values that maximize the posterior probability. $$h_{MAP} = \\arg\\max\\limits_{h \\in H} P(h|D) = \\arg\\max\\limits_{h \\in H} \\frac{P(D|h)P(h)}{P(D)} = \\arg\\max\\limits_{h \\in H} P(D|h)P(h)$$\n",
+    "  - $P(D)$ is a constant, so we can ignore it\n",
+    "  - $h_{MAP}$ is called the maximum a posteriori hypothesis\n",
+    "  - we find the parameter values that make the observed data most probable given our prior knowledge about the parameters\n",
+    "- if we assume that all hypotheses are equally likely, then $P(h)$ is a constant, so we can ignore it. $$h_{ML} = \\arg\\max\\limits_{h \\in H} P(D|h)$$\n",
+    "  - $h_{ML}$ is called the maximum likelihood hypothesis\n",
+    "  - we find the parameter values that make the observed data most probable\n",
+    "  - used when we have no prior knowledge about the parameters\n",
+    "\n",
+    "#### Conditional independence\n",
+    "Conditional independence, given C, is defined as independence under the probability law P(·|C). That is, A and B are conditionally independent given C if and only if $$ P(A \\cap B|C) = P(A|C)P(B|C)$$\n",
+    "- independence does not imply conditional independence [(link)](https://www.youtube.com/watch?v%253DTAyA-rjmesQ%2526list%253DPLUl4u3cNGP60hI9ATjSFgLZpbNJ7myAg6%2526index%253D35)\n",
+    "- means that $$ P(A|B,C) = P(A|C)$$ and $$ P(A \\cap B|C) = P(A|C)P(B|C)$$\n",
+    "<img src=\"https://i.imgur.com/O7op64y.jpg\" width=\"300\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n",
+    "- Naive Bayes assumes that all features are conditionally independent given the class. $$ P(X_1, X_2 | Y) = P(X_1 | X_2, Y)P(X_2 | Y) = P(X_1 | Y)P(X_2 | Y)$$\n",
+    "- General form : $$ P(X_1, X_2, ..., X_n | Y) = \\prod\\limits_{i=1}^n P(X_i | Y)$$\n",
+    "  - how many parameters do we need to estimate? (??)\n",
+    "  - how many parameters do we need to estimate if we assume that all features are conditionally independent given the class? (??)\n",
+    "\n",
+    "#### Naive Bayes classifier\n",
+    "\n",
+    "- Naive Bayes classifier is a simple probabilistic classifier based on applying Bayes' theorem with strong independence assumptions between the features.\n",
+    "- Steps to apply Naive Bayes classifier, given a table like this:\n",
+    "  |Weather|Play|\n",
+    "  |---|---|\n",
+    "  |Sunny|No|\n",
+    "  |...|...|\n",
+    "  |Rainy|Yes|\n",
+    "- We convert it into a frequency table like this:\n",
+    "  |Weather|No|Yes|Total|Prob|\n",
+    "  |---|---|---|---|---|\n",
+    "  |Sunny|2|3|5| P(Sunny) = $\\frac{5}{14}$|\n",
+    "  |Overcast|0|4|4| P(Overcast) = $\\frac{4}{14}$|\n",
+    "  |Rainy|3|2|5| P(Rainy) = $\\frac{5}{14}$|\n",
+    "  |Total|5|9|14|1|\n",
+    "  |Prob|P(No) = $\\frac{5}{14}$|P(Yes) = $\\frac{9}{14}$|1|\n",
+    "Then we can calculate the posterior probability of each class, given the evidence (weather), for example, $P(Yes|Sunny)$:\n",
+    "$$ P(Yes|Sunny) = \\frac{P(Sunny|Yes)P(Yes)}{P(Sunny)} = \\frac{\\frac{3}{9}\\frac{9}{14}}{\\frac{5}{14}} = \\frac{3}{5}$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "attachments": {},
@@ -272,7 +358,7 @@
     "#### Variance and standard deviation of a discrete random variable\n",
     "\n",
     "The variance of a discrete random variable $X$ is the weighted average of the squared deviations of the possible values of $X$ from the mean of $X$, where the weights are the probabilities of the values of $X$.\n",
-    "$$ \\sigma^2 = Var(X) = \\sum(x - \\mu)^2 P(x) = [\\sum x^2 P(x)] - \\mu^2$$\n",
+    "$$ \\sigma^2 = Var(X) = \\sum(x - \\mu)^2 P(x) = [\\sum \\chi^2 P(x)] - \\mu^2$$\n",
     "\n",
     "The standard deviation of a discrete random variable $X$ is the square root of the variance of $X$.\n",
     "$$ \\sigma = \\sqrt{Var(X)}$$\n",
@@ -308,7 +394,7 @@
     "    $$ y = f(x) = \\frac{1}{\\sigma \\sqrt{2\\pi}} e^{-\\frac{1}{2}(\\frac{x - \\mu}{\\sigma})^2}$$\n",
     "    where $\\pi \\approx 3.14159$ and $e \\approx 2.71828$ \n",
     "- Standard normal distribution is the normal distribution with mean $\\mu = 0$ and standard deviation $\\sigma = 1$, denoted by $Z = N(0, 1)$.\n",
-    "    $$ y = f(x) = \\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}x^2}$$\n",
+    "    $$ y = f(x) = \\frac{1}{\\sqrt{2\\pi}} e^{-\\frac{1}{2}\\chi^2}$$\n",
     "    - rules for help computing $P(Z)$:\n",
     "      - $P(Z \\leq z) = P(Z < z) + P(Z = z) = P(Z < z)$\n",
     "      - $P(Z \\geq z) = 1 - P(Z < z)$\n",
@@ -538,18 +624,77 @@
     "#### $\\chi^2$ test for independence\n",
     "All the $\\chi^2$ distributions form a family, each specified by a parameter called the number of degrees of freedom. The number of degrees of freedom for a $\\chi^2$ distribution is equal to the number of independent standard normal random variables that are squared and summed to obtain the $\\chi^2$ random variable.\n",
     "\n",
-    "<img src=\"https://i.imgur.com/T4Ow1S0.jpg\" width=\"600\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "<img src=\"https://i.imgur.com/T4Ow1S0.jpg\" width=\"400\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
     "\n",
-    "The value of the $\\chi^2$ random variable with $df = k$ that cuts off a right tail with an area of $c$ is denoted by $\\chi^2_c$.\n",
+    "The value of the $\\chi^2$ random variable with $df = k$ that cuts off a right tail with an area of $c$ is denoted by $\\chi^2_c$, and is called a critical value.\n",
     "\n",
+    "The $\\chi^2$ test for independence is used to test the null hypothesis that two categorical variables are independent. For example:\n",
+    "- $H_0$: Baby gender and baby heart rate (high/low) are independent (two factors are independent)\n",
+    "- $H_1$: Baby gender and baby heart rate are not independent (two factors are not independent)\n",
+    "\n",
+    "Steps : \n",
+    "1. Create the contingency table (rows denoting Factor 1, columns denoting Factor 2) and compute the row and column totals\n",
+    "2. Compute the expected counts for each cell, $$E_{ij} = \\frac{row\\ total \\times column\\ total}{grand\\ total}$$\n",
+    "3. Compute the $\\chi^2$ test statistic, $$\\chi^2 = \\sum{\\frac{(O_{ij} - E_{ij})^2}{E_{ij}}}$$, where $O_{ij}$ is the observed count for cell $(i, j)$ and $E_{ij}$ is the expected count for cell $(i, j)$\n",
+    "4. Based on decided $\\alpha$ level and degrees of freedom ($df = (n_{rows} - 1) \\times (n_{columns} - 1)$, find the critical value $\\chi^2_\\alpha$\n",
+    "5. Compare the test statistic and critical value, if $\\chi^2 > \\chi^2_\\alpha$, reject $H_0$\n",
+    "    - If $H_0$ is rejected, conclude that the two categorical variables are not independent\n",
+    "\n",
+    "#### $\\chi^2$ goodness-of-fit test\n",
+    "\n",
+    "The $\\chi^2$ goodness-of-fit test is used to test the null hypothesis that a population distribution follows a specified distribution. For example:\n",
+    "- $H_0$: The 6-sided die is fair\n",
+    "- $H_1$: The 6-sided die is not fair\n",
+    "\n",
+    "We wish to determine that every face of the die has the same probability of appearing. We roll the die 60 times and record the number of times each face appears. We then compare the observed counts with the expected counts.\n",
+    "\n",
+    "Steps:\n",
+    "1. Create the contingency table (rows denoting each face of the die, columns denoting observed counts and expected counts)\n",
+    "2. Compute the expected counts for each face, $$E_{i} = \\frac{\\text{total number of rolls}}{\\text{number of faces}}$$\n",
+    "3. Compute the $\\chi^2$ test statistic, $$\\chi^2 = \\sum{\\frac{(O_{i} - E_{i})^2}{E_{i}}}$$, where $O_{i}$ is the observed count for face $i$ and $E_{i}$ is the expected count for face $i$\n",
+    "4. Based on decided $\\alpha$ level and degrees of freedom ($df = n_{faces} - 1$, find the critical value $\\chi^2_\\alpha$\n",
+    "5. Compare the test statistic and critical value, if $\\chi^2 > \\chi^2_\\alpha$, reject $H_0$\n",
+    "    - If $H_0$ is rejected, conclude that the die is not fair\n",
+    "\n",
+    "#### F-test for equality of two variances\n",
+    "- Family of F-distributions, each specified by two parameters called the degrees of freedom ($df_1$ and $df_2$), also called the numerator and denominator degrees of freedom. They are not interchangeable.\n",
+    "\n",
+    "<img src=\"https://i.imgur.com/pfMjAvT.png\" width=\"400\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "\n",
+    "The value of the F random variable with $df_1$ and $df_2$ that cuts off a right tail with an area of $c$ is denoted by $F_{df_1, df_2, \\alpha}$, and is called a critical value.\n",
+    "Also, $$F_{df_1, df_2, \\alpha} = \\frac{1}{F_{df_2, df_1, 1 - \\alpha}}$$\n",
+    "\n",
+    "The F-test for equality of two variances is used to test the null hypothesis that two populations have equal variances. For example:\n",
+    "- $H_0$: $\\sigma_1^2 = \\sigma_2^2$\n",
+    "- Three forms of $H_1$:\n",
+    "    - $\\sigma_1^2 \\neq \\sigma_2^2$ (two-tailed test)\n",
+    "    - $\\sigma_1^2 > \\sigma_2^2$ (right-tailed test)\n",
+    "    - $\\sigma_1^2 < \\sigma_2^2$ (left-tailed test)\n",
+    "\n",
+    "Steps:\n",
+    "1. We take two samples from the two populations of size $n_1$ and $n_2$ and compute the sample variances $s_1^2$ and $s_2^2$\n",
+    "    - the samples are independent, and the populations are normally distributed\n",
+    "2. Compute the F test statistic, $$F = \\frac{s_1^2}{s_2^2}$$\n",
+    "3. Based on decided $\\alpha$ level and degrees of freedom ($df_1 = n_1 - 1$ and $df_2 = n_2 - 1$), find the critical value $F_{df_1, df_2, \\alpha}$\n",
+    "4. There are different rejection regions for the three forms of $H_1$:\n",
+    "    - $\\sigma_1^2 \\neq \\sigma_2^2$: reject $H_0$ if $F \\le F_{df_1, df_2, 1 - \\alpha/2}$ or $F \\ge F_{df_1, df_2, \\alpha/2}$\n",
+    "    - $\\sigma_1^2 > \\sigma_2^2$: reject $H_0$ if $F \\ge F_{df_1, df_2, \\alpha}$\n",
+    "    - $\\sigma_1^2 < \\sigma_2^2$: reject $H_0$ if $F \\le F_{df_1, df_2, 1 - \\alpha}$\n",
+    "\n",
+    "#### F-test for equality of means of several populations\n",
+    "\n",
+    "Given population 1 with sample size $n_1$, sample mean $\\bar{x}_1$ and sample variance $s_1^2$, population 2 with sample size $n_2$, sample mean $\\bar{x}_2$ and sample variance $s_2^2$, and so on, the F-test for equality of means of several populations is used to test the null hypothesis that the means of all populations are equal. \n",
+    "We calculate the following quantities:\n",
+    "- $n = n_1 + n_2 + \\dots + n_k$\n",
+    "- $\\bar{x} = \\frac{n_1\\bar{x}_1 + n_2\\bar{x}_2 + \\dots + n_k\\bar{x}_k}{n}$\n",
+    "- Mean square treatment (MST), $MST = \\frac{n_1(\\bar{x}_1 - \\bar{x})^2 + n_2(\\bar{x}_2 - \\bar{x})^2 + \\dots + n_k(\\bar{x}_k - \\bar{x})^2}{k - 1}$\n",
+    "- Mean square error (MSE), $MSE = \\frac{(n_1 - 1)s_1^2 + (n_2 - 1)s_2^2 + \\dots + (n_k - 1)s_k^2}{n - k}$\n",
+    "\n",
+    "Finally we have the F-test statistic, $$F = \\frac{MST}{MSE}$$\n",
+    "If the $k$ populations are normally distributed, then $F$ has an F-distribution with $k - 1$ and $n - k$ degrees of freedom.\n",
+    "The test is right tailed, so we reject $H_0$ if $F \\ge F_{k - 1, n - k, \\alpha}$\n",
     "\n"
    ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
