--- a/Semester 2/DML/DML_Formulas_and_Code.ipynb
+++ b/Semester 2/DML/DML_Formulas_and_Code.ipynb
@@ -389,6 +389,8 @@
     "| Data Integration   | ETL consolidates data from multiple sources before transformation | ELT integrates data from various sources directly into the data warehouse |\n",
     "| Use Cases          | Batch-oriented data integration, legacy systems, data warehousing | Real-time analytics, big data processing, cloud-based data warehouses |\n",
     "\n",
+    "Difference between batch and stream processing:\n",
+    "\n",
     "| Aspect             | Batch Processing                                              | Stream Processing                                              |\n",
     "|--------------------|--------------------------------------------------------------|---------------------------------------------------------------|\n",
     "| Data Processing    | Processes data in fixed-size batches or chunks               | Processes data in real-time or near real-time                  |\n",
@@ -400,7 +402,27 @@
     "| Use Cases          | Periodic data analysis, reports, ETL, data warehousing       | Real-time analytics, monitoring, anomaly detection, IoT       |\n",
     "| Data Windowing     | Can apply window-based operations on batches of data          | Supports sliding windows and time-based operations            |\n",
     "| Data Order         | Order of data is maintained within a batch                    | Handles out-of-order data arrival and event time ordering     |\n",
-    "| Examples           | Hadoop MapReduce, Spark, Hive, Pig, etc | Apache Kafka, Flink, Storm, Amazon Kinesis, etc |"
+    "| Examples           | Hadoop MapReduce, Spark, Hive, Pig, etc | Apache Kafka, Flink, Storm, Amazon Kinesis, etc |\n",
+    "\n",
+    "### Serialization frameworks [[link]](https://www.linkedin.com/pulse/serialization-frameworks-simplified-taher-borsadwala/?trk=read_related_article-card_title)\n",
+    "- serialization : process of converting an object into a stream of bytes, to store the object or transmit it to memory, a database, or a file\n",
+    "- deserialization : reverse process of converting a stream of bytes into an object\n",
+    "- serialization frameworks are language-neutral, platform-neutral extensible mechanism for serializing structured data\n",
+    "- provide a SDL (Schema Definition Language) to define a logical data model made of objects, attributes\n",
+    "- tag the objects with specific version numbers, to support schema evolution, forwards and backwards compatibility\n",
+    "- support for primitive data types, complex data types, and collections\n",
+    "- generate code to serialize and deserialize objects, and to convert between different versions of the same object, in different languages\n",
+    "\n",
+    "| Aspect | Protocol Buffers (protobuf) | Apache Thrift | Apache Avro |\n",
+    "|-|-|-|-|\n",
+    "| Schema Definition | Protocol Buffer Language (Protobuf) | Thrift IDL | JSON Schema |\n",
+    "| Data Serialization | Binary | Binary, Compact, JSON | Binary, JSON |\n",
+    "| Schema Evolution | Limited support for schema evolution | Support for schema evolution and backward compatibility | Support for schema evolution and backward compatibility |\n",
+    "| Data Validation | Limited built-in data validation mechanisms | Supports custom data validation mechanisms | Supports custom data validation mechanisms |\n",
+    "| RPC Support | Limited built-in RPC support | Built-in support for RPC | Limited built-in RPC support |\n",
+    "| Use Cases | Interoperability, messaging, data exchange | Interoperability, RPC, microservices | Data serialization, data storage, messaging |\n",
+    "\n",
+    "\n"
    ]
   }
  ],
