--- a/Semester 2/DML/DML_Formulas_and_Code.ipynb
+++ b/Semester 2/DML/DML_Formulas_and_Code.ipynb
@@ -81,14 +81,27 @@
     "\n",
     "### Data Warehouses and Data Lakes\n",
     "- data warehouse\n",
-    "    - database that is optimized for analytics\n",
-    "    - typically used to store structured data\n",
+    "    - central database that is optimized for analytics\n",
+    "        - seperates OLTP (online transaction processing) and OLAP (online analytical processing)\n",
+    "    - typically used to store structured, highly-formatted data\n",
     "    - often used for reporting and dashboarding\n",
     "    - examples: Amazon Redshift, Google BigQuery, Snowflake\n",
+    "    - moving from ETL (extract, transform, load) to ELT (extract, load, transform)\n",
+    "        - data is loaded into the warehouse first, then transformed as needed\n",
+    "        - allows for more flexibility in how data is transformed\n",
+    "    - data mart\n",
+    "        - subset of a data warehouse, usually oriented towards a specific business line or team\n",
+    "        - typically used for reporting and dashboarding\n",
+    "        - data more accessible to business users, additional transformations can be applied\n",
     "- data lake\n",
     "    - repository for structured and unstructured data\n",
     "    - typically used for storing large amounts of raw data before processing\n",
-    "    - examples: Amazon S3, Google Cloud Storage, Hadoop File System (HDFS)"
+    "    - problems with data quality, data governance, and becoming a dumping ground\n",
+    "    - examples: Amazon S3, Google Cloud Storage, Hadoop File System (HDFS)\n",
+    "    - data lakehouse\n",
+    "        - combines data warehouse and data lake\n",
+    "        - data is stored in a data lake, but is also available for querying via a SQL interface\n",
+    "        - examples: Databricks Delta Lake, Apache Iceberg"
    ]
   },
   {
@@ -422,8 +435,124 @@
     "| RPC Support | Limited built-in RPC support | Built-in support for RPC | Limited built-in RPC support |\n",
     "| Use Cases | Interoperability, messaging, data exchange | Interoperability, RPC, microservices | Data serialization, data storage, messaging |\n",
     "\n",
-    "\n"
+    "Nice properies:\n",
+    "- more compact than binary JSON, due to omission of field names\n",
+    "- valuable documentation, schema is self-describing\n",
+    "- database of schemas allows to check for backward and forward compatibility\n",
+    "- ability to generate code is useful for type safety and performance"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data architectures\n",
+    "Modern data stacks are cloud based, plug and play, easy to use, off-shelf solutions to create a modular and cost-effective data architecture.\n",
+    "1. Lambda architecture : three systems, batch, speed, and serving, to handle all data processing needs operating independently\n",
+    "    - source is immutable, data is stored in a master dataset sent to batch and speed layers in parallel\n",
+    "    - batch layer : stores all data, performs batch processing, creating precomputed and aggregated views of data\n",
+    "    - speed layer : stores recent data, performs real-time processing for low latency queries\n",
+    "    - serving layer : combines results from batch and speed layers\n",
+    "    - problems : complex, difficult to maintain, difficult to debug\n",
+    "2. Kappa architecture : one system, speed, to handle all data processing needs\n",
+    "    - just use a stream processing platform as backend for all data processsing needs\n",
+    "    - real time and batch processing are unified, data is processed in the same way\n",
+    "    - problems : complicated and expensive in practice, batch storage and processing is still more cost-effective for enormous historical datasets\n",
+    "3. Dataflow architecture : core idea is to view all data as events, and aggregation is performed over various types of windows\n",
+    "    - ongoing real-time event streams are unbounded data\n",
+    "    - data batches are simply bounded event streams and boundaries provides natural window\n",
+    "    - windows can be tumbling or sliding\n",
+    "    - real-time and batch processing happens in same system using nearly identical code\n",
+    "    - philosophy : batch is a special case of stream processing\n",
+    "4. Data mesh architecture : philosophy of decentralization of data\n",
+    "    - data is owned by the domain that produces it, and is shared as a product\n",
+    "\n",
+    "### Big data architectures\n",
+    "- is designed to handle ingestion, processing, and analysis of data that is too large or complex for traditional data processing systems\n",
+    "<img src=\"https://i.imgur.com/arQfDQ3.png\" width=\"500\" style=\"display: block; margin-left: auto; margin-right: auto; padding-top: 10px; padding-bottom: 10px;\">\n",
+    "- workloads:\n",
+    "    - batch processing of big data at rest\n",
+    "    - stream processing of big data in motion\n",
+    "    - interactive exploration of big data\n",
+    "    - machine learning and predictive analytics\n",
+    "- components:\n",
+    "    - data sources\n",
+    "    - data storage\n",
+    "    - batch processing\n",
+    "    - real time ingestion\n",
+    "    - stream processing\n",
+    "    - analytical data store\n",
+    "    - analytics and visualization\n",
+    "    - orchestration and scheduling\n",
+    "        - repeated workflows, eg. ETL, ML pipelines, etc\n",
+    "- benefits:\n",
+    "    - scalability, fault tolerance, and high availability\n",
+    "    - choice of tools/technologies, flexibility\n",
+    "    - performance through parallel processing\n",
+    "    - inteoperability with existing systems, extensibility\n",
+    "- considerations:\n",
+    "    - data volume, velocity, variety, and veracity\n",
+    "    - complexity of processes, skillset of team, technology maturity\n",
+    "\n",
+    "### Data pipelines\n",
+    "- take data from raw to ready for analytics, ML/AI systems, applications, etc\n",
+    "- benefits : \n",
+    "    - self-service data access\n",
+    "    - accelerated time to value, cloud migration and adoption\n",
+    "    - real time analytics, ML/AI, and applications\n",
+    "- challenges :\n",
+    "    - always under construction, constantly evolving\n",
+    "    - out of order data pipelines\n",
+    "    - changing technologies and tools involves weeks/months of rework\n",
+    "- working : when a data pipeline is deployed and running, it pulls data from the source, applies rules for transformation and processing, then pushes data to its destination\n",
+    "- architectures:\n",
+    "    - batch data pipeline : data is collected, processed, and loaded in batches, eg. ETL\n",
+    "    - stream data pipeline : flow data continuously, eg. real-time analytics, messaging systems, event processing, fraud detection, etc\n",
+    "    - change data capture (CDC) pipeline : used to refresh data changes and keep multiple data stores in sync, eg. for backup, replication, migration, etc\n",
+    "\n",
+    "### Data pipeline tools\n",
+    "- data pipeline tools are used to build, schedule, and monitor data pipelines\n",
+    "- questions : source, destination, frequency, transformations, stability of input data/environment, is it a one-time or recurring job, etc\n",
+    "- types:\n",
+    "    1. ingestion and loading: support only basic transformations, eg. AWS Data Pipeline, Azure Data Factory, Google Cloud Dataflow, etc\n",
+    "    2. integration and transformation: support complex transformations, eg. Apache Airflow, AWS Glue, etc\n",
+    "    3. data engineering platforms: support complex transformations, and provide additional features, eg. Databricks, etc\n",
+    "        - abstract away the underlying infrastructure, and provide a managed service\n",
+    "        - build in resilience, scalability, and security\n",
+    "        - adopt new platforms by pointing at them\n",
+    "-  use cases:\n",
+    "    1. big data : reuse and collaboration of components for data ingestion, transformation, and loading\n",
+    "    2. data science : self-service data access and automation of data preparation\n",
+    "    3. self-service analytics : centralize logic and permissions, eliminate data silos\n",
+    "    4. data warehousing : automate data loading and transformation, and reduce time to value\n",
+    "- usually there is a development pipeline and an execution pipeline\n",
+    "    - development : creates code to process data for a new pipeline\n",
+    "        - steps : requirements, design, development, testing, deployment\n",
+    "    - execution : runs the pipeline in production\n",
+    "        - steps : scheduling, monitoring, alerting, troubleshooting, etc\n",
+    "- people involved in data pipelines:\n",
+    "    - data engineers : build and maintain ETL pipelines\n",
+    "    - data scientists : build predictive models\n",
+    "    - BI developers : uses visualization tools to build dashboards and reports\n",
+    "- micro pipeline : divide individual pipelines into smaller, reusable components\n",
+    "    - mentioned in this section, blah blah blah\n",
+    "- testing data pipelines:\n",
+    "    - development : data is fixed, code is changing\n",
+    "    - production : data is changing, code is fixed\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
